CHATS_SIT/force-app/main/default/objects/T_COUNTY_PLAN_ADR__c.object
<CustomObject>
    <description>County Plan Address</description>
    <fields>
        <fullName>ADR_CITY__c</fullName>
        <description>City</description>
        <label>City</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_LINE_1__c</fullName>
        <description>Address Line 1</description>
        <label>Address Line 1</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_LINE_2__c</fullName>
        <description>Address Line 2</description>
        <label>Address Line 2</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_STATE__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00002</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADR_ZIP_EXTN__c</fullName>
        <description>Zip Extension</description>
        <label>Zip Extension</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_ZIP__c</fullName>
        <description>Zip</description>
        <label>Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_COUNTY__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>County</description>
        <label>County</label>
        <referenceTo>T_COUNTY__c</referenceTo>
        <relationshipLabel>County Address</relationshipLabel>
        <relationshipName>County3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NBR_FAX__c</fullName>
        <description>Fax Number</description>
        <label>Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NBR_PHONE_EXTN__c</fullName>
        <description>Phone Number Extension</description>
        <label>Phone Number Extension</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NBR_PHONE__c</fullName>
        <description>Phone Number</description>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <label>County Address</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ADR_LINE_1__c</columns>
        <columns>ADR_LINE_2__c</columns>
        <columns>ADR_CITY__c</columns>
        <columns>IDN_COUNTY__c</columns>
        <columns>ADR_STATE__c</columns>
        <columns>ADR_ZIP__c</columns>
        <columns>ADR_ZIP_EXTN__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IDN_COUNTY__c</field>
            <operation>equals</operation>
            <value>Clear Creek</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Today</fullName>
        <columns>NAME</columns>
        <columns>IDN_COUNTY__c</columns>
        <columns>ADR_LINE_1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>County Addresses</pluralLabel>
    <recordTypes>
        <fullName>Mailing</fullName>
        <active>true</active>
        <label>Mailing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Main_Location</fullName>
        <active>true</active>
        <label>Main Location</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other_Location</fullName>
        <active>true</active>
        <label>Other Location</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Adr_Zip_Extn_Length_4</fullName>
        <active>true</active>
        <description>set Zip Extn address to length 4</description>

        <errorConditionFormula>AND(NOT(ISBLANK(ADR_ZIP_EXTN__c)),
     OR(LEN(ADR_ZIP_EXTN__c) &lt;&gt; 4,
        NOT(ISNUMBER(ADR_ZIP_EXTN__c))
       ) 
   )</errorConditionFormula>
        <errorDisplayField>ADR_ZIP_EXTN__c</errorDisplayField>
        <errorMessage>Zip Extension should be 4 digit number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Adr_Zip_Main_Length_5</fullName>
        <active>true</active>
        <description>set Zip Address to length 5</description>
        <errorConditionFormula>AND(NOT(ISBLANK(ADR_ZIP__c)), 
OR(LEN(ADR_ZIP__c) &lt;&gt; 5, 
NOT(ISNUMBER(ADR_ZIP__c)) 
) 
)</errorConditionFormula>
        <errorDisplayField>ADR_ZIP__c</errorDisplayField>
        <errorMessage>Zip Address should be 5 digit number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fax_Nbr_Len_MustBe_10</fullName>
        <active>true</active>
        <description>Fax Number must be of length 10 digits</description>
        <errorConditionFormula>AND(NOT(ISBLANK(NBR_FAX__c)), 
OR(LEN(NBR_FAX__c) &lt;&gt; 10, 
NOT(ISNUMBER(NBR_FAX__c)) 
) 
)</errorConditionFormula>
        <errorDisplayField>NBR_FAX__c</errorDisplayField>
        <errorMessage>Fax Number must be of length 10 digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PhnNbrExtn_Len_MustBe_6</fullName>
        <active>true</active>
        <description>Phone Number extension length should be 6</description>
        <errorConditionFormula>AND(NOT(ISBLANK( NBR_PHONE_EXTN__c )), 
OR(LEN( NBR_PHONE_EXTN__c ) &lt;&gt; 6, 
NOT(ISNUMBER( NBR_PHONE_EXTN__c )) 
) 
)</errorConditionFormula>
        <errorDisplayField>NBR_PHONE_EXTN__c</errorDisplayField>
        <errorMessage>Phone Number Extension must be a 6 digit number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PhnNbr_Len_MustBe_10</fullName>
        <active>true</active>
        <description>Phone Number must be 10 digit number</description>
        <errorConditionFormula>AND(NOT(ISBLANK( NBR_PHONE__c )), 
OR(LEN(NBR_PHONE__c) &lt;&gt; 10, 
NOT(ISNUMBER(NBR_PHONE__c)) 
) 
)</errorConditionFormula>
        <errorDisplayField>NBR_PHONE__c</errorDisplayField>
        <errorMessage>Phone Number must be 10 digit number</errorMessage>
    </validationRules>
</CustomObject>