CHATS_SIT/force-app/main/default/objects/T_COUNTY_PLAN_ADR__c/validationRules/Adr_Zip_Extn_Length_4.validationRule-meta.xml
<ValidationRule>
    <fullName>Adr_Zip_Extn_Length_4</fullName>
    <active>true</active>
    <description>set Zip Extn address to length 4</description>
    <errorConditionFormula>AND(NOT(ISBLANK(ADR_ZIP_EXTN__c)),
     OR(LEN(ADR_ZIP_EXTN__c) &lt;&gt; 4,
        NOT(ISNUMBER(ADR_ZIP_EXTN__c))
       ) 
   )</errorConditionFormula>
    <errorDisplayField>ADR_ZIP_EXTN__c</errorDisplayField>
    <errorMessage>Zip Extension should be 4 digit number</errorMessage>
</ValidationRule>