CHATS_SIT/force-app/main/default/objects/T_COUNTY_PLAN_ADR__c/validationRules/Adr_Zip_Main_Length_5.validationRule-meta.xml
<ValidationRule>
    <fullName>Adr_Zip_Main_Length_5</fullName>
    <active>true</active>
    <description>set Zip Address to length 5</description>
    <errorConditionFormula>AND(NOT(ISBLANK(ADR_ZIP__c)), 
OR(LEN(ADR_ZIP__c) &lt;&gt; 5, 
NOT(ISNUMBER(ADR_ZIP__c)) 
) 
)</errorConditionFormula>
    <errorDisplayField>ADR_ZIP__c</errorDisplayField>
    <errorMessage>Zip Address should be 5 digit number</errorMessage>
</ValidationRule>