CHATS_SIT/force-app/main/default/objects/T_COUNTY_PLAN_ADR__c/validationRules/PhnNbr_Len_MustBe_10.validationRule-meta.xml
<ValidationRule>
    <fullName>PhnNbr_Len_MustBe_10</fullName>
    <active>true</active>
    <description>Phone Number must be 10 digit number</description>
    <errorConditionFormula>AND(NOT(ISBLANK( NBR_PHONE__c )), 
OR(LEN(NBR_PHONE__c) &lt;&gt; 10, 
NOT(ISNUMBER(NBR_PHONE__c)) 
) 
)</errorConditionFormula>
    <errorDisplayField>NBR_PHONE__c</errorDisplayField>
    <errorMessage>Phone Number must be 10 digit number</errorMessage>
</ValidationRule>