CHATS_SIT/force-app/main/default/objects/T_COUNTY_PLAN_ADR__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ADR_LINE_1__c</columns>
    <columns>ADR_LINE_2__c</columns>
    <columns>ADR_CITY__c</columns>
    <columns>IDN_COUNTY__c</columns>
    <columns>ADR_STATE__c</columns>
    <columns>ADR_ZIP__c</columns>
    <columns>ADR_ZIP_EXTN__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>