CHATS_SIT/force-app/main/default/objects/T_COUNTY_PLAN_ADR__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>NAME</columns>
    <columns>IDN_COUNTY__c</columns>
    <columns>ADR_LINE_1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today</label>
</ListView>